cabal-version:      3.0
name:               just-chat-backend
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Vasiliy Klyotskin
maintainer:         vasiliy@klyotskin.ru
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Register.Domain
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable just-chat-backend
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        just-chat-backend
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite just-chat-backend-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Register.DomainTest
    build-depends:
        base ^>=4.17.2.1,
        HUnit,
        just-chat-backend
